# tradebot

./: .env.example  .env.swiftrouter  CCXT_DECIBEL_README.md  DECIBEL_IMPLEMENTATION.md  GUIDE.md  LARGE_VOLUME_QUICK_START.md  LARGE_VOLUME_README.md  LIMIT_ORDERS.md  RINGKASAN_STRATEGI.md  STRATEGI_TP_SL.md  STRATEGI_VOLUME_TINGGI.md  cancel_all_orders.py  ccxt_decibel_bot.py  check_decibel_api.py  check_open_orders.py  check_orderbook.py  check_pending_orders.py  check_positions.py  check_status.py  close_all_positions.py  example_large_volume.py  execute_large_volume.py  force_close_all.py  mean_reversion_bot.py  optimized_bot.py  pyproject.toml  quick_start.py  quick_start_ccxt.py  quick_start_limit.py  quick_start_tp.py  requirements.txt  setup_skills.py  simple_bot.py  strategy_high_volume.py  strategy_limit_order.py  strategy_with_tp.py  test_2s_hold.py  test_30s_timeframe.py  test_bybit.py  test_ccxt_setup.py  (+12 more)
.claude/skills/: decibel-trading.md  nado-trading.md
bot_trade/: __init__.py  __main__.py  cli.py  config.py  models.py
bot_trade/exchanges/: __init__.py  base.py  decibel.py  decibel_large_volume.py  nado.py  rise.py
bot_trade/strategies/: __init__.py  delta_neutral.py  funding_scanner.py  indicator_trader.py  volume_generator.py
bot_trade/utils/: swiftrouter.py
skills/: SKILL.md  decibel-trading.md  delta-neutral.md  rise-trading.md
