[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bot-trade"
version = "1.0.0"
description = "DEX Trading Bot for Nado, Rise, and Decibel"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "nado-protocol>=0.3.5",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",
    "loguru>=0.7.2",
    "apscheduler>=3.10.4",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
decibel = ["aptos-sdk>=0.9.0"]
rise = ["web3>=6.15.0", "eth-account>=0.11.0"]
all = ["aptos-sdk>=0.9.0", "web3>=6.15.0", "eth-account>=0.11.0"]

[project.scripts]
bot-trade = "bot_trade.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot_trade*"]
